--- a/strapi/api/products/models/products.settings.json
+++ b/strapi/api/products/models/products.settings.json
@@ -2,8 +2,7 @@
   "kind": "collectionType",
   "collectionName": "products",
   "info": {
-    "name": "Products",
-    "description": ""
+    "name": "products"
   },
   "options": {
     "increments": true,
@@ -14,13 +13,10 @@
     "title": {
       "type": "string"
     },
-    "description": {
-      "type": "text"
-    },
     "price": {
-      "type": "decimal"
+      "type": "integer"
     },
-    "image": {
+    "image_url": {
       "model": "file",
       "via": "related",
       "allowedTypes": [
@@ -30,12 +26,6 @@
       ],
       "plugin": "upload",
       "required": false
-    },
-    "image_url": {
-      "type": "string"
-    },
-    "featured": {
-      "type": "boolean"
     }
   }
 }
